# library2024

./: .air.toml  .gitignore  Dockerfile  Makefile  go.mod  go.sum  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js
.github/workflows/: main.yml
cmd/: main.go
generate/: main.go
go/: .air.toml  Dockerfile  Makefile  go.mod  go.sum
go/cmd/: main.go
go/internal/handlers/: about.go  index.go  lendbook.go  login.go  logout.go
go/internal/middleware/: middleware.go  middleware_test.go
go/internal/templates/: about_templ.go  book.templ  book_templ.go  index.templ  layout.templ  layout_templ.go  register.templ
internal/config/: config.go
internal/handlers/: about.go  about_test.go  author.go  book.go  getabout.go  gethome.go  getlogin.go  getregister.go  index.go  login.go  login_test.go  notfound.go  postlogin.go  postlogin_test.go  postregister.go  postregister_test.go  register.go  register_test.go
internal/hash/: hash.go
internal/hash/passwordHash/: passwordhash.go
internal/middleware/: middleware.go
internal/store/: repo.go  store.go
internal/templates/: Index.templ  Index_templ.go  NotFound_templ.go  author.templ  author_templ.go  book.templ  book_templ.go  index.templ  index_templ.go  layout.templ  layout_templ.go  login.templ  login_templ.go  register.templ  register_templ.go
internal/utils/: encoders.go  encoders_test.go
rust/: Cargo.toml
rust/crates/comments-service/: Cargo.toml
rust/crates/comments-service/src/: handler.rs  main.rs
static/css/: style.css  style.min.css
static/script/: htmx_config.js  response-targets.js
(+50 files in other folders)
