[package]
name = "comments-service"
version.workspace = true
edition.workspace = true

[dependencies]
askama.workspace = true
axum.workspace = true
axum-htmx.workspace = true
color-eyre.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true